Create a submodule for the wiki pages, as this application should also contain velocity templates and skin files that will go in a web module.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/xwiki-applications/trunk@6086 f329d543-caf0-0310-9063-dda96c69346f

--- a/wiki/pom.xml
+++ b/wiki/pom.xml
@@ -26,16 +26,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.xpn.xwiki.platform.applications</groupId>
-    <artifactId>xwiki-applications</artifactId>
-    <version>8-SNAPSHOT</version>
+    <artifactId>xwiki-application-s5</artifactId>
+    <version>1.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-application-s5</artifactId>
-  <name>XWiki Platform - Applications - S5</name>
+  <artifactId>xwiki-application-s5-wiki</artifactId>
+  <name>XWiki Platform - Applications - S5 - Wiki</name>
   <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>xar</packaging>
   <description>Application to create slides with S5</description>
-  <modules>
-    <module>wiki</module>
-    <!--module>web</module-->
-  </modules>
 </project>
